Último push con mejoras, favicon y ajustes finales

--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logos/logo-rojo.png" />
+    
+    <!-- Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Transformamos ideas en experiencias digitales modernas. Sitios web, branding y soluciones con estilo y confianza." />
     <meta name="theme-color" content="#8b5cf6" />
+
+    <!-- Open Graph (Redes Sociales) -->
+    <meta property="og:title" content="ByHijar Web Solutions" />
+    <meta property="og:description" content="Sitios web modernos, soluciones confiables." />
+    <meta property="og:image" content="/logos/logo-rojo.png" />
+    <meta property="og:url" content="https://byhijar.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- Título -->
     <title>ByHijar Web Solutions</title>
   </head>
   <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300">
