feat: Finalize editorial identity, mobile interactivity & visual polish

--- a/index.html
+++ b/index.html
@@ -7,20 +7,25 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/logos/logo-rojo.png" />
     
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <!-- Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Transformamos ideas en experiencias digitales modernas. Sitios web, branding y soluciones con estilo y confianza." />
-    <meta name="theme-color" content="#8b5cf6" />
+    <meta name="description" content="Portafolio de José Hijar. Especialista en arquitectura backend, automatización y creación de sistemas a medida." />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- Open Graph (Redes Sociales) -->
-    <meta property="og:title" content="ByHijar Web Solutions" />
-    <meta property="og:description" content="Sitios web modernos, soluciones confiables." />
+    <meta property="og:title" content="José Hijar | System Builder" />
+    <meta property="og:description" content="Especialista en arquitectura backend y automatización." />
     <meta property="og:image" content="/logos/logo-rojo.png" />
     <meta property="og:url" content="https://byhijar.netlify.app" />
     <meta property="og:type" content="website" />
 
     <!-- Título -->
-    <title>ByHijar Web Solutions</title>
+    <title>José Hijar | System Builder</title>
   </head>
   <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300">
     <div id="root"></div>
